--- a/views/home.ejs
+++ b/views/home.ejs
@@ -65,15 +65,28 @@
                 <div class="modal-content">
                   <div class='container' style="margin: 20px 0px;">
                     <h2>Sign Up</h2>
-                    <form>
+                    <form method="post" action="/customers/signUp">
                         <div class="form-group">
-                          <label for="exampleInputEmail1">Email address</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                          <label for="exampleInputEmail1">Name</label>
+                          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Your Name" name="name">
                         </div>
                         <div class="form-group">
-                          <label for="exampleInputPassword1">Password</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                          <label for="exampleInputPassword1">Email</label>
+                          <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Enter your email" name="email">
                         </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Password</label>
+                            <input type="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Password" name="password">
+                          </div>
+                          <div class="form-group">
+                            <label for="exampleInputPassword1">Phone</label>
+                            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password" name="phone">
+                          </div>
+                          <div class="form-group">
+                              <label for="exampleInputPassword1">Gender</label><br>
+                              <input type="radio" id="exampleInputPassword1" placeholder="Password" name="gender" value="male">Male
+                              <input type="radio" id="exampleInputPassword1" placeholder="Password" name="gender" value="female">Female
+                          </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                       </form>
                   </div>
