--- a/views/customer/home.ejs
+++ b/views/customer/home.ejs
@@ -26,10 +26,17 @@
                   <a class="dropdown-item" href="#">Concert</a>
                   <a class="dropdown-item" href="#">Conference</a>
                   <a class="dropdown-item" href="#">Workshop</a>
-          </li>
+                </div>
+            </li>
         </ul>
-          <p>Welcome <%= customer.name %></p>
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="margin: 0px 5px;" type="button" data-toggle="modal" data-target=".bd-example-modal-lg-1">Edit Profile</button>
+          <h4>Welcome <%= customer.name %></h4>
+        <div class="nav-item dropdown">
+          <button class="nav-link dropdown-toggle" type="submit" style="margin: 0px 5px;" type="button" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Your Account</button>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Edit Profile</a>
+              <a class="dropdown-item" href="/customers/<%= customer.id%>/logout">Logout</a>
+          </div>
+        </div>
       </div>
     </nav>
     <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
@@ -57,60 +64,29 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
-      </div>
-          <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-lg">
-              <div class="modal-content">
-                <div class='container' style="margin: 20px 0px;">
-                  <h2>Login</h2>
-                  <form>
-                      <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                      </div>
-                      <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                      </div>
-                      <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="modal fade bd-example-modal-lg-1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-              <div class="modal-dialog modal-lg">
-                <div class="modal-content">
-                  <div class='container' style="margin: 20px 0px;">
-                    <h2>Sign Up</h2>
-                    <form method="post" action="/customers/signUp">
-                        <div class="form-group">
-                          <label for="exampleInputEmail1">Name</label>
-                          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Your Name" name="name">
-                        </div>
-                        <div class="form-group">
-                          <label for="exampleInputPassword1">Email</label>
-                          <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Enter your email" name="email">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Password</label>
-                            <input type="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Password" name="password">
-                          </div>
-                          <div class="form-group">
-                            <label for="exampleInputPassword1">Phone</label>
-                            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password" name="phone">
-                          </div>
-                          <div class="form-group">
-                              <label for="exampleInputPassword1">Gender</label><br>
-                              <input type="radio" id="exampleInputPassword1" placeholder="Password" name="gender" value="male">Male
-                              <input type="radio" id="exampleInputPassword1" placeholder="Password" name="gender" value="female">Female
-                          </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                      </form>
+    </div>
+          <!-- ticket -->
+    <div style="margin:50px 20px;">
+        <div class="row">
+          <% for(let i=0; i<events.length; i++) { %>
+            <div class="col">
+              <div class="card" style="width: 18rem;">
+                  <img class="card-img-top" src="<%= events[i].image %>" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text"> <%= events[i].description %> </p>
+                      <% if(events[i].seats == events[i].maxSeats) { %>
+                        <a href="/events/<%= events[i].id %>/order" class="btn btn-primary">Sold Out</a>
+                      <% } else if (events[i].seats < events[i].maxSeats) { %>
+                        <a href="/events/<%= events[i].id %>/order" class="btn btn-primary">Order</a>
+                        <% } %>
                   </div>
-                </div>
               </div>
             </div>
+          <% } %>  
+        </div>
+    </div>
+      
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <%- include('../partials/script') %>
