--- a/views/home.ejs
+++ b/views/home.ejs
@@ -79,7 +79,7 @@
                           </div>
                           <div class="form-group">
                             <label for="exampleInputPassword1">Phone</label>
-                            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Password" name="phone">
+                            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Phone" name="phone">
                           </div>
                           <div class="form-group">
                               <label for="exampleInputPassword1">Gender</label><br>
