--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,18 +9,17 @@
   </style>
   </head>
   <body>
-    <%- include('./partials/navbar') %>
     <div class="container">
         <div class="card" style="margin-top: 60px;   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
                 <div class="card-body">
                 <h4 class="card-title" style="text-align: center;">User Profile</h4>
-                <img style="width: 40%; height: 50%; border-radius: 50%; margin-left: 265px; margin-top: 20px;" src="https://image.freepik.com/free-vector/coloured-boy-design_1114-83.jpg">
+                <img style="width: 40%; height: 50%; border-radius: 50%; margin-left: 315px;" src="https://image.freepik.com/free-vector/coloured-boy-design_1114-83.jpg">
                 <div class="container">
-                    <form style="margin-top:20px;" method="post" action="">
+                    <form style="margin-top:20px;" method="post" action="/customers/<%= customer.id %>/edit">
                         <div class="form-group row">
-                            <label for="inputPassword" class="col-sm-2 col-form-label">Edit Name</label>
+                            <label for="inputName" class="col-sm-2 col-form-label">Edit Name</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="inputPassword" name="name" value="<%= customer.name %>">
+                                <input type="text" class="form-control" id="inputName" name="name" value="<%= customer.name %>">
                             </div>
                         </div>
                         <div class="form-group row">
@@ -30,15 +29,9 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="inputPassword" class="col-sm-2 col-form-label">Edit Password</label>
+                            <label for="inputPhone" class="col-sm-2 col-form-label">Edit Phone</label>
                             <div class="col-sm-10">
-                                <input type="password" class="form-control" id="inputPassword" name="password" value="<%= customer.password %>">
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label for="inputPassword" class="col-sm-2 col-form-label">Edit Phone</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="inputPassword" name="phone" value="<%= customer.phone %>">
+                                <input type="text" class="form-control" id="inputPhone" name="phone" value="<%= customer.phone %>">
                             </div>
                         </div>
                         <input type="submit" class="btn btn-primary">
