--- a/views/customer/home.ejs
+++ b/views/customer/home.ejs
@@ -7,7 +7,7 @@
     <%- include('../partials/css') %>
   <style>
     .d-block.w-100{
-      height: 100vh;
+      height: 75vh;
     }
   </style>
   </head>
@@ -33,7 +33,7 @@
         <div class="nav-item dropdown">
           <button class="nav-link dropdown-toggle" type="submit" style="margin: 0px 5px;" type="button" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Your Account</button>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Edit Profile</a>
+              <a class="dropdown-item" href="/customers/<%= customer.id%>/edit">Edit Profile</a>
               <a class="dropdown-item" href="/customers/<%= customer.id%>/logout">Logout</a>
           </div>
         </div>
@@ -73,10 +73,11 @@
               <div class="card" style="width: 18rem;">
                   <img class="card-img-top" src="<%= events[i].image %>" alt="Card image cap">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title"><%= events[i].name %></h5>
                     <p class="card-text"> <%= events[i].description %> </p>
+                    <p class="card-text"> Schedule: <%= events[i].dateToString() %> </p>
                       <% if(events[i].seats == events[i].maxSeats) { %>
-                        <a href="/events/<%= events[i].id %>/order" class="btn btn-primary">Sold Out</a>
+                        <a href="/events/<%= events[i].id %>/order" class="btn btn-primary disabled">Sold Out</a>
                       <% } else if (events[i].seats < events[i].maxSeats) { %>
                         <a href="/events/<%= events[i].id %>/order" class="btn btn-primary">Order</a>
                         <% } %>
