--- a/views/order/confirmation.ejs
+++ b/views/order/confirmation.ejs
@@ -6,6 +6,41 @@
     <!-- Bootstrap CSS -->
     <%- include('../partials/css') %>
   <style>
+  
+  .container{
+    margin-top: 100px;
+  }
+
+  input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+
+  div.container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
   </style>
   </head>
   <body>
@@ -36,42 +71,35 @@
             </div>
           </div>
     </nav>
-    <div class="container" style="margin-top:0%;">
-        <div class="row">
-            <div class="col py-3 px-lg-5 border bg-light" style="margin-top: 100px;">
-                <img src="<%= event.image %>">
-            </div>
-        <div class="col">
-            <div class="col py-3 px-lg-5 border bg-light" style="margin-top: 100px;">
-                <h3>Event Name</h3>
-                <p><%= event.name %></p>
-                <h3>Schedule</h3>
-                <p><%= event.schedule %></p>
-                <h3>Available Tickets</h3>
-                <p><%= event.seats%>/<%= event.maxSeats%> Tickets</p>
-                <h3>Venue</h3>
-                <p><%= event.venue %> </p>
-                <h3>Ticket Price</h3>
-                <p>Rp.<%= event.price %> </p>
-                <form style="margin-top:20px;" method="post" action="">
-                    <div class="form-group row">
-                        <label for="inputQuantity" class="col-sm-2 col-form-label">Qty</label>
-                        <div class="col-sm-10">
-                            <input type="number" class="form-control" id="inputQuantity" name="quantity" value="">
-                        </div>
-                    </div>
-                    <input type="submit" class="btn btn-primary">
-                </form>
-            </div>
-        </div>
-    </div>
+   
+    <div class="container">
+        <h2>Receipt</h2>
+        <form action="" method="post">
+          <label for="fname">Name</label>
+          <input type="text" id="fname" name="name" readonly value="<%= customer.name%>">
+      
+          <label for="lname">Email</label>
+          <input type="text" id="lname" name="email" readonly value="<%= customer.email%>">
+
+          <label for="lname">Event</label>
+          <input type="text" id="lname" name="eventname" readonly value="<%= events.name%>">
+
+          <label for="lname">Total Ticket</label>
+          <input type="text" id="lname" name="quantity" readonly value="<%= order.quantity%>">
+
+          <label for="lname">Ticket Price</label>
+          <input type="text" id="lname" name="price" readonly value="<%= events.price%>">
+
+          <label for="lname">Total Payment</label>
+          <input type="text" id="lname" name="payment" readonly value="<%= order.price%>">
+          
+        </form>
+        <a href="/home">
+          <button>Back to Home</button>
+        </a>
+      </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <%- include('../partials/script') %>
-    <script>
-      $('.carousel').carousel({
-          interval: 2000
-      })  
-    </script>
   </body>
 </html>
